# python-project

./: .gitignore  ActionCenter.py  ActionCenter.spec  README.md  README_shell_command_tool.md  UPLOAD_REFRESH_FIX_SUMMARY.md  audio_transcriber.spec  build_installer.py  build_installer.spec  canny_edge_detector.py  check_prime.py  directory_inspector.spec  edge_detection.py  filters.py  firebase-storage-management.py  git_analytics_tool.py  image-processing.py  image-resizer.py  image-resizer.spec  image_processing.py  image_utils.py  live_reload.py  live_reload.spec  main.py  media_cutter.spec  obsidian_notes_uploader.spec  pyproject.toml  serviceAccountKey.b64  serviceAccountKey.json  sharpening.py  test_base64_credentials.py  test_firebase_auth.py  test_firebase_conversion.py  test_is_loading_fix.py  test_upload_refresh_issue.py  unsharp_mark_kernel.py  utils.py  verify_base64_decode.py
.fleet/: settings.json
cli/: check_prime.py  statement_cli.py  stun_ip.py
cmd/: test.py
image-processing/: filters.py
image_processing/: __init__.py  edge_detection.py  image_utils.py  main.py  sharpening.py
media-processing/: media_cutter.py
plans/: AUTHENTICATION_FIX_SUMMARY.md  ENHANCED_FEATURES_SUMMARY.md  FirebaseStorageManagement.md  GitAnalyticTools.md  KafkaTool.md  ShellCommandActionTool.md  UI_UX_ENHANCEMENTS_SUMMARY.md
test-data/: 1755174785539-dummy-10.json  metadefender.profile.json
tools/: KioskDevTools.py  README_obsidian_uploader.md  audio_transcriber.py  audio_transcriber_requirements.txt  directory_inspector.py  dummy_data_generator.py  file_encryptor.py  (+7 more)
(+19 files in other folders)
